[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "5toolperformace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dataclasses>=0.8",
    "hatchling>=1.27.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pydantic>=2.11.4",
    "pytest>=8.3.5",
    "typer>=0.15.4",
]

[project.scripts]
athletic-perf = "athletic_performance.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/athletic_performance"]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
python_files = "test_*.py"